Added additional conversions,  helper functionalities and utilities
- oKLabToSRGB
-  color manipulations
- color scaling
-  mapping to gamut
- space sanitizers
- space validators
- wcug functions

- README update
-  package update

--- a/package.json
+++ b/package.json
@@ -95,7 +95,8 @@
     "OK LCH",
     "Ok_LCH",
     "OkLch",
-    "OKLch"
+    "OKLch",
+    "OKLAB"
   ],
   "author": "Slavko Mihajlovic - dynimorius",
   "license": "ISC",
