--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "@dynamize/color-utilities",
-  "version": "1.1.2",
+  "name": "@omnidyon/color-utilities",
+  "version": "1.0.1",
+  "publishConfig": {
+    "access": "public"
+  },
   "description": "Library to format, convert and work with colors.",
   "types": "./lib/types/public_api.d.ts",
   "main": "./lib/esm/public_api.js",
